25 Feb  2007
   [Alexey]
   - Repainted reuser list
   - Added search field for mask editors
   
24 Feb 2007
   [Noldor]
   - New QT4 win compiling projects: still unusable... kvilib and kvirc compile but only in release;
     you need to compile qt libraries by yourself then try to compile kvilib and kvirc (use COMPILE_USE_QT4 in kvi_wincfg.h).
     Some module compile without problem... others need to be ported. 

20 Feb 2007
   [Alexey]
   - Completely reworked ignore system
   - Implemented reguser match caching
   - Implemented custom color for registered user caching
   [Pragma]
   - Yet more Qt4 port.
     - We now require Qt >= 4.2.2 for Qt4 support to work. Older 4.x versions
       have bugs that can't be worked around and tend to crash kvirc
       in various circumstances (including displaying tooltips).
       Qt 4.2 also re-adds the possibility to add QWidget objects to popup menus.
     - Yet more modules ported.
   - A fix for the KVS expression operator precedence.
   - A couple of general fixes that I can't remember but have been reported on
     the list.
   - I'm thinking about qmake support (as suggested by Matteo Catanese some time ago)
     ... will require some work ... what do you think about it ?
   
18 Feb 2007
   [Alexey]
   - Fixed dns resolver under win32
   - Fixed minimized channels open
   - Added bot detection icon (who will write docs?)
   - Fixed winamp plugin problem under win32 (removed msvcr80.dll dependency)

08 Feb 2007
   [Pragma]
   - More Qt 4.x port.
     Solved the most disturbing problems: it looks a lot better now.
     - Font metric cache values can no longer be computed directly from a
       widget's font. We must use the painter idea of the font instead.
       This complicates caching a bit.
     - Some of the QPainter functions seem to behave in a bit different way
     - QFrame::drawContents() is gone... we need to reimplement paintEvent()