@@ -1,3 +1,7 @@
+26 Feb  2007
+   [Alexey]
+   - Added Export/Import feature to channel list module
+   
 25 Feb  2007
    [Alexey]
    - Repainted reuser list
